fix: 快手数据库补全支持, 添加phone和location信息; \n feat: 添加llm_summary,用于快手联系信息捕捉;

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+.history/
+data2/
+/config/*
 # C extensions
 *.so
 
@@ -165,7 +167,7 @@ cython_debug/
 /temp_image/
 /browser_data/
 /data/
-
+/docs/STZHONGS.TTF
 */.DS_Store
 .vscode
 /node_modules
